--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,8 @@
               "node_modules/datatables.net-buttons/js/buttons.print.min.js",
 
               "node_modules/admin-lte/dist/js/adminlte.min.js",
-              "node_modules/admin-lte/bower_components/select2/dist/js/select2.min.js",              
+              "node_modules/admin-lte/bower_components/select2/dist/js/select2.min.js",
+              "node_modules/image-compressor.js/dist/image-compressor.min.js",           
               
               "src/assets/js/adminLTEOptions.js",
               "src/assets/js/scripts.js"
