--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "daterangepicker": "^3.0.5",
     "font-awesome": "^4.7.0",
     "icheck": "^1.0.2",
+    "image-compressor.js": "^1.1.4",
     "ionicons": "^4.5.8",
     "jquery": "^3.4.1",
     "jquery-knob": "^1.2.11",
@@ -49,6 +50,7 @@
     "jszip": "^3.2.1",
     "moment": "^2.24.0",
     "morris.js": "^0.5.0",
+    "ng2-file-upload": "^1.3.0",
     "raphael": "^2.2.8",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.3",
