--- a/angular.json
+++ b/angular.json
@@ -33,12 +33,13 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/jqueryui/jquery-ui.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              
               "node_modules/raphael/raphael.min.js",
               "node_modules/morris.js/morris.min.js",
               "node_modules/jquery-sparkline/jquery.sparkline.min.js",
               "node_modules/jquery-knob/dist/jquery.knob.min.js",
               "node_modules/moment/moment.js",
-              "node_modules/bootstrap-datepicker/js/bootstrap-datepicker.js",
+              "node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js",
               "node_modules/jquery-slimscroll/jquery.slimscroll.min.js",
               "node_modules/bootstrap3-wysihtml5-bower/dist/bootstrap3-wysihtml5.all.min.js",
               "node_modules/icheck/icheck.min.js",
@@ -53,8 +54,11 @@
               "node_modules/datatables.net-buttons/js/buttons.print.min.js",
 
               "node_modules/admin-lte/dist/js/adminlte.min.js",
-              "node_modules/admin-lte/bower_components/select2/dist/js/select2.min.js",
               "node_modules/image-compressor.js/dist/image-compressor.min.js",           
+              "node_modules/admin-lte/bower_components/select2/dist/js/select2.min.js",
+              "node_modules/admin-lte/plugins/input-mask/jquery.inputmask.date.extensions.js",
+              "node_modules/admin-lte/plugins/input-mask/jquery.inputmask.extensions.js",
+              "node_modules/admin-lte/plugins/input-mask/jquery.inputmask.js",
               
               "src/assets/js/adminLTEOptions.js",
               "src/assets/js/scripts.js"
