--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bootstrap-datepicker": "0.0.13",
     "@types/bootstrap.v3.datetimepicker": "^4.17.47",
     "@types/daterangepicker": "^3.0.1",
+    "@types/file-saver": "^2.0.1",
     "@types/icheck": "^0.8.29",
     "@types/jquery-knob": "^1.2.31",
     "@types/jquery.slimscroll": "^1.3.31",
@@ -38,6 +39,7 @@
     "datatables.net-buttons": "^1.5.6",
     "datatables.net-buttons-dt": "^1.5.6",
     "daterangepicker": "^3.0.5",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "icheck": "^1.0.2",
     "image-compressor.js": "^1.1.4",
